--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,10 +21,15 @@ h6 {
 
 h1 {
   font-size: 96px;
+  line-height: 1.5;
+}
+h2 {
+  font-size: 64px;
 }
 p {
-  font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background-color: var(--secondary-color);
@@ -40,8 +45,8 @@ p {
 .hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
-  font-weight: 24px;
-  line-height: 2;
+  font-size: 24px;
+  line-height: 1.5;
   color: #272142;
 }
 
@@ -52,4 +57,32 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+  background-color: white;
+  border: 1px solid var(--branding-color);
+  border-radius: 4;
+  color: var(--branding-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+@media (max-width: 960px) {
+  h1 {
+    font-size: 44px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
