--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -91,6 +91,33 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+.logo {
+  max-height: 40px;
+}
+
+nav {
+  padding: 20px 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav li.active a,
+nav a:hover {
+  color: var(--branding-color);
+}
 .mainPicture {
   border-radius: 20px;
 }
@@ -115,5 +142,8 @@ p {
   .content-container {
     text-align: center;
     padding: 0;
+  }
+  nav a {
+    font-size: 14px;
   }
 }
